--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
             <button id="startScan">Start Scan</button>
         </p>
         <div id="results"></div>
+        <div id="age"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
